added contact routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="top_nav">
     <a href="">Home</a>
     <a href="about">About</a>
+    <a href="contact">Contact us</a>
     <hr>
   </div>
 </main>
