--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <main class="main">
   <div class="top_nav">
-    <a href="">Home</a>
-    <a href="about">About</a>
-    <a href="contact">Contact us</a>
+    <div>Name: {{username()}} </div>
+    <a href="" style="margin-right: 20px;">Home</a>
+    <a href="about" style="margin-right: 20px;">About</a>
+    <a href="contact-us" style="margin-right: 20px;">Contact us</a>
     <hr>
   </div>
 </main>
